--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Inconsolata:300,700);
+@import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
 
 body {
   padding:50px;
